<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Luftkraftsport</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_open_ad_page">Details</string>
    <string name="title_search_page">Suche</string>
...
    <string name="title_searches_page">Meine Suchens</string>
    <string name="title_locations_page">Meine Position</string>
    <string name="title_set_price_page">Preis</string>
    <string name="title_register_user">Register</string>
    <string name="title_activate_user">Aktiviere Benutzer</string>

    <string name="title_open_my_ads_page">Meine Anzeigen</string>

    <string name="enter_title_string">Titel</string>

    <string name="submit_string">Submit</string>

    <string name="facebook_app_id">535532649933816</string>
...
